<resources>
    <string name="app_name">BarterTradeApp</string>

    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_btn_txt">Login To Account</string>
    <string name="login_reg_btn_txt">Need A New Account ?</string>
    <string name="action_search_text">Search</string>
    <string name="account_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">SignUp</string>
    <string name="login_btn_text">Login</string>
    <string name="reg_login_text">Already have an Account ?</string>
    <string name="login_signup_btn">No account yet? Create one</string>
    <string name="reg_email_text">Enter Email</string>
    <string name="reg_username_text">Enter UserName</string>
    <string name="reg_pass_text">Enter Password</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="setup_name_hint_text">Enter Name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_add_new_post">Add Product</string>
    <string name="menu_message">Messages</string>
    <string name="menu_view_posts_on_map">Map</string>
    <string name="menu_user_previous_posts">Previous Postings</string>

    <!--Maps-->
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
