<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="60dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/splash">

    </ImageView>

    <TextView
        android:id="@+id/logo_title"
        android:layout_below="@+id/logo"
        android:text="Signup"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/signUpHolder"
        android:layout_below="@id/logo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerVertical="true">


        <EditText
            android:id="@+id/reg_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/reg_username_text"
            android:inputType="text"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_below="@+id/reg_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/reg_email_text"
            android:inputType="textEmailAddress"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_below="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/reg_pass_text"
            android:inputType="textPassword"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_email" />

        <EditText
            android:id="@+id/reg_confirm_pass"
            android:layout_below="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/reg_confirm_pass_text"
            android:inputType="textPassword"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/image_upload"
            android:layout_below="@+id/reg_confirm_pass"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pic_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:background="@color/transparent"
                android:layout_weight="8"
                android:text="Select Profile Picture">
            </Button>

            <ImageView
                android:id="@+id/check_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                >

            </ImageView>


        </LinearLayout>


        <Button
            android:id="@+id/reg_btn"
            android:layout_below="@+id/image_upload"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:background="@drawable/button_shape"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/reg_btn_text"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/reg_login_btn"
            android:layout_below="@+id/reg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/transparent"
            android:layout_centerInParent="true"
            android:textColor="@color/grey"
            android:padding="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/reg_login_text"
            android:textAllCaps="false"
            android:textSize="18sp" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>