<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LogInActivity">

    <RelativeLayout
        android:id="@+id/signUpHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/SignUp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="Barter Trade LogIn"
            android:textSize="20sp"
            android:textColor="#707070"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/reg_email"
            android:layout_below="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/reg_email_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_below="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/reg_pass_text"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textSize="18sp" />


        <Button
            android:id="@+id/login_btn"
            android:layout_below="@+id/reg_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorPrimary"
            android:padding="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login_btn_text"
            android:textAllCaps="false"
            android:textColor="#707070"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/login_signUp_btn"
            android:layout_toRightOf="@+id/login_btn"
            android:layout_below="@+id/reg_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:padding="14dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login_signup_btn"
            android:textAllCaps="false"
            android:textColor="#707070"
            android:textSize="18sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>